--- a/style.css
+++ b/style.css
@@ -2,11 +2,30 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  color: white;
 }
 
+body {
+  background-color: rgb(3, 3, 3);
+}
+
+.todo {
+  max-width: 768px;
+}
+.todo #todo__container {
+  width: 100%;
+  align-items: center;
+  max-height: 60vh;
+  overflow: scroll;
+}
+.todo #todo-input {
+  color: white;
+}
 .todo__container__item {
   display: flex;
-  border: 2px solid black;
+  border: 2px solid gray;
+  border-radius: 10px;
+  width: 90%;
   align-items: center;
   justify-content: space-between;
   gap: 20px;
@@ -14,6 +33,8 @@
 }
 .todo__container__item p {
   margin: 0;
+  max-height: 60px;
+  overflow: scroll;
 }
 
 .delete-todo {
@@ -21,5 +42,5 @@
   background: transparent;
 }
 .delete-todo img {
-  height: 50px;
+  height: 30px;
 }/*# sourceMappingURL=style.css.map */
