--- a/style.scss
+++ b/style.scss
@@ -2,18 +2,37 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    color: white;
+}
+body{
+    background-color: rgb(3, 3, 3);
 }
 .todo{
+    max-width: 768px;
+    #todo__container{
+        width: 100%;
+        align-items: center;
+        max-height: 60vh;
+        overflow: scroll;
+    }
+    #todo-input{
+        color: white;
+    }
     &__container{
         &__item{
             display: flex;
-            border: 2px solid black;
+            border: 2px solid gray;
+            border-radius: 10px;
+            width: 90%;
             align-items: center;
             justify-content: space-between;
             gap: 20px;
             padding: 10px 30px;
+           
             p{
                 margin: 0;
+                max-height: 60px;
+                overflow: scroll;
             }
         }
     }
@@ -22,7 +41,7 @@
     border: none;
     background:transparent;
     img{
-        height: 50px;
+        height: 30px;
     }
     
 }
