--- a/style.scss
+++ b/style.scss
@@ -40,8 +40,8 @@ body{
 .delete-todo {
     border: none;
     background:transparent;
+    margin-left:8px;
     img{
         height: 30px;
     }
-    
 }
