--- a/style.css
+++ b/style.css
@@ -33,15 +33,16 @@ body {
 }
 .todo__container__item p {
   margin: 0;
-  max-height: 60px;
+  max-height: 25px;
+  max-width: 440px;
   overflow: scroll;
 }
 
-.delete-todo {
+.todo-btn {
   border: none;
   background: transparent;
   margin-left: 8px;
 }
-.delete-todo img {
+.todo-btn img {
   height: 30px;
 }/*# sourceMappingURL=style.css.map */
