--- a/style.scss
+++ b/style.scss
@@ -1,25 +1,30 @@
-*{
+* {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
     color: white;
 }
-body{
+
+body {
     background-color: rgb(3, 3, 3);
 }
-.todo{
+
+.todo {
     max-width: 768px;
-    #todo__container{
+
+    #todo__container {
         width: 100%;
         align-items: center;
         max-height: 60vh;
         overflow: scroll;
     }
-    #todo-input{
+
+    #todo-input {
         color: white;
     }
-    &__container{
-        &__item{
+
+    &__container {
+        &__item {
             display: flex;
             border: 2px solid gray;
             border-radius: 10px;
@@ -28,20 +33,23 @@ body{
             justify-content: space-between;
             gap: 20px;
             padding: 10px 30px;
-           
-            p{
+
+            p {
                 margin: 0;
-                max-height: 60px;
+                max-height: 25px;
+                max-width: 440px;
                 overflow: scroll;
             }
         }
     }
 }
-.delete-todo {
+
+.todo-btn {
     border: none;
-    background:transparent;
-    margin-left:8px;
-    img{
+    background: transparent;
+    margin-left: 8px;
+
+    img {
         height: 30px;
     }
 }
