--- a/style.css
+++ b/style.css
@@ -42,7 +42,12 @@ body {
   border: none;
   background: transparent;
   margin-left: 8px;
+  border-radius: 50%;
 }
 .todo-btn img {
   height: 30px;
+}
+.todo-btn img:hover {
+  transform: scale(1.07);
+  transition: 300ms ease-in-out;
 }/*# sourceMappingURL=style.css.map */
