--- a/style.scss
+++ b/style.scss
@@ -48,8 +48,13 @@ body {
     border: none;
     background: transparent;
     margin-left: 8px;
-
+    border-radius: 50% ;
     img {
         height: 30px;
+        &:hover{
+            transform: scale(1.07);
+            transition: 300ms ease-in-out;
+        }
     }
+    
 }
