--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,8 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap');
 * {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
     color: white;
+    font-family: "Orbitron", serif;
 }
 
 body {
@@ -21,6 +23,7 @@ body {
 
     #todo-input {
         color: white;
+        font-weight: 400;
     }
 
     &__container {
