--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap');
+
 * {
     box-sizing: border-box;
     margin: 0;
@@ -51,13 +52,19 @@ body {
     border: none;
     background: transparent;
     margin-left: 8px;
-    border-radius: 50% ;
+    border-radius: 50%;
+
     img {
         height: 30px;
-        &:hover{
+
+        &:hover {
             transform: scale(1.07);
             transition: 300ms ease-in-out;
         }
     }
-    
+
+}
+
+#editInput {
+    background-color: transparent;
 }
